--- a/local.html
+++ b/local.html
@@ -1,29 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PeerJS Chat (No STUN)</title>
-    <script src="https://unpkg.com/peerjs@1.3.2/dist/peerjs.min.js"></script>
-    <style>
-        body { font-family: Arial, sans-serif; text-align: center; margin: 20px; }
-        #messages { border: 1px solid #ccc; height: 300px; overflow-y: scroll; margin: 10px; padding: 10px; }
-        input, button { margin: 5px; padding: 10px; }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>PeerJS Chat (No STUN)</title>
+  <script src="https://unpkg.com/peerjs@1.3.2/dist/peerjs.min.js"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      margin: 20px;
+    }
+    
+    #messages {
+      border: 1px solid #ccc;
+      height: 300px;
+      overflow-y: scroll;
+      margin: 10px;
+      padding: 10px;
+    }
+    
+    input,
+    button {
+      margin: 5px;
+      padding: 10px;
+    }
+  </style>
 </head>
+
 <body>
-    <h2>PeerJS Chat (No STUN/TURN)</h2>
-    <p>Your Peer ID: <span id="my-id">Generating...</span></p>
-    <input type="text" id="peer-id" placeholder="Enter Peer ID to connect">
-    <button onclick="connectPeer()">Connect</button>
-
-    <div id="messages"></div>
-
-    <input type="text" id="message" placeholder="Type a message">
-    <button onclick="sendMessage()">Send</button>
-
-    <script>
-        const peer = new Peer({ config: { iceServers: [] } }); // No STUN/TURN
+  <h2>PeerJS Chat (No STUN/TURN)</h2>
+  <p>Your Peer ID: <span id="my-id">Generating...</span></p>
+  <input type="text" id="peer-id" placeholder="Enter Peer ID to connect">
+  <button onclick="connectPeer()">Connect</button>
+  
+  <div id="messages"></div>
+  
+  <input type="text" id="message" placeholder="Type a message">
+  <button onclick="sendMessage()">Send</button>
+  
+  <script>
+    const peer = new Peer({ config: { iceServers: [] } }); // No STUN/TURN
         let conn;
 
         peer.on('open', id => document.getElementById("my-id").innerText = id);
@@ -59,6 +77,7 @@
             div.textContent = msg;
             document.getElementById("messages").appendChild(div);
         }
-    </script>
+  </script>
 </body>
+
 </html>
